# mcp-release-guardian

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pypi-install-smoke.yml
docs/: DETERMINISM_NOTES.md  EXAMPLE_OUTPUTS.md  V1_CONTRACT.md
src/mcp_release_guardian/: __init__.py  server.py
template/: ADOPTING_THIS_TEMPLATE.md  README_TEMPLATE.md
template/.github/workflows/: pypi-install-smoke.yml
tests/: conftest.py  test_tools.py
tests/fixtures/clean_python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
