[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-release-guardian"
version = "0.1.2"
description = "Deterministic MCP server for validating release hygiene in local repositories"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-release-guardian = "mcp_release_guardian.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_release_guardian"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
