[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-release-guardian"
version = "0.1.4"
description = "Deterministic MCP server for validating release hygiene in local repositories"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
  { name = "Curtis D. Williams" }
]

dependencies = [
  "fastmcp>=2.0.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/curtis-d-williams/mcp-release-guardian"
Repository = "https://github.com/curtis-d-williams/mcp-release-guardian"
Issues = "https://github.com/curtis-d-williams/mcp-release-guardian/issues"

[project.scripts]
mcp-release-guardian = "mcp_release_guardian.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_release_guardian"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
